deployments/auth-middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: auth-strip
  namespace: auth
spec:
  stripPrefix:
    prefixes:
      - /v1/auth
