deployments/auth-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: dallasformularacing/auth:356c997b43857575d4b87a1e8f6708b3e4da3e97
        ports:
        - containerPort: 5000
        volumeMounts:
          - name: rsa-keys
            mountPath: /etc/rsa-keys
            readOnly: true
      volumes:
        - name: rsa-keys
          secret:
            secretName: rsa-keys
