deployments/auth-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: auth
  annotations:
    tailscale.com/expose: "true"
spec:
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: auth
