deployments/auth-route.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth
  namespace: auth
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: auth-auth-strip@kubernetescrd
spec:
  rules:
    - host: api.dallasformularacing.com
      http:
        paths:
          - path: /v1/auth
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 80
